[gd_scene load_steps=3 format=3 uid="uid://6qbr0u464sl1"]

[ext_resource type="Script" uid="uid://pmian4ejrp8m" path="res://tableaux.gd" id="1_c66iq"]
[ext_resource type="Texture2D" uid="uid://dllq5rfb5t62r" path="res://icon.svg" id="2_yksyb"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c66iq")
metadata/_edit_use_anchors_ = true

[node name="titre" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
text = "Quel PPC es-tu ?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="reponse" type="RichTextLabel" parent="."]
visible = false
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -447.0
offset_top = -100.0
offset_right = 418.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="centrage" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -316.5
offset_top = -64.0
offset_right = 316.5
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="choix" type="HBoxContainer" parent="centrage"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="centrage/choix"]
layout_mode = 2

[node name="mois" type="RichTextLabel" parent="centrage/choix/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 6
text = "Mois de naissance"
horizontal_alignment = 1
vertical_alignment = 1

[node name="moisNaissance" type="OptionButton" parent="centrage/choix/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = false
selected = 0
item_count = 12
popup/item_0/text = "01"
popup/item_0/id = 0
popup/item_1/text = "02"
popup/item_1/id = 1
popup/item_2/text = "03"
popup/item_2/id = 2
popup/item_3/text = "04"
popup/item_3/id = 3
popup/item_4/text = "05"
popup/item_4/id = 4
popup/item_5/text = "06"
popup/item_5/id = 5
popup/item_6/text = "07"
popup/item_6/id = 6
popup/item_7/text = "08"
popup/item_7/id = 7
popup/item_8/text = "09"
popup/item_8/id = 8
popup/item_9/text = "10"
popup/item_9/id = 9
popup/item_10/text = "11"
popup/item_10/id = 10
popup/item_11/text = "12"
popup/item_11/id = 11

[node name="VBoxContainer2" type="VBoxContainer" parent="centrage/choix"]
layout_mode = 2

[node name="prénom" type="RichTextLabel" parent="centrage/choix/VBoxContainer2"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Première lettre de votre prénom "
horizontal_alignment = 1
vertical_alignment = 1

[node name="lettrePrenom" type="OptionButton" parent="centrage/choix/VBoxContainer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
selected = 0
fit_to_longest_item = false
item_count = 26
popup/item_0/text = "A"
popup/item_0/id = 0
popup/item_1/text = "B"
popup/item_1/id = 1
popup/item_2/text = "C"
popup/item_2/id = 2
popup/item_3/text = "D"
popup/item_3/id = 3
popup/item_4/text = "E"
popup/item_4/id = 4
popup/item_5/text = "F"
popup/item_5/id = 5
popup/item_6/text = "G"
popup/item_6/id = 6
popup/item_7/text = "H"
popup/item_7/id = 7
popup/item_8/text = "I"
popup/item_8/id = 8
popup/item_9/text = "J"
popup/item_9/id = 9
popup/item_10/text = "K"
popup/item_10/id = 10
popup/item_11/text = "L"
popup/item_11/id = 11
popup/item_12/text = "M"
popup/item_12/id = 12
popup/item_13/text = "N"
popup/item_13/id = 13
popup/item_14/text = "O"
popup/item_14/id = 14
popup/item_15/text = "P"
popup/item_15/id = 15
popup/item_16/text = "Q"
popup/item_16/id = 16
popup/item_17/text = "R"
popup/item_17/id = 17
popup/item_18/text = "S"
popup/item_18/id = 18
popup/item_19/text = "T"
popup/item_19/id = 19
popup/item_20/text = "U"
popup/item_20/id = 20
popup/item_21/text = "V"
popup/item_21/id = 21
popup/item_22/text = "W"
popup/item_22/id = 22
popup/item_23/text = "X"
popup/item_23/id = 23
popup/item_24/text = "Y"
popup/item_24/id = 24
popup/item_25/text = "Z"
popup/item_25/id = 25

[node name="VBoxContainer3" type="VBoxContainer" parent="centrage/choix"]
layout_mode = 2
alignment = 1

[node name="jour" type="RichTextLabel" parent="centrage/choix/VBoxContainer3"]
custom_minimum_size = Vector2(175, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Jour de naissance"
horizontal_alignment = 1
vertical_alignment = 1

[node name="jourNaissance" type="OptionButton" parent="centrage/choix/VBoxContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
selected = 0
fit_to_longest_item = false
item_count = 31
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 5
popup/item_6/text = "7"
popup/item_6/id = 6
popup/item_7/text = "8"
popup/item_7/id = 7
popup/item_8/text = "9"
popup/item_8/id = 8
popup/item_9/text = "10"
popup/item_9/id = 9
popup/item_10/text = "11"
popup/item_10/id = 10
popup/item_11/text = "12"
popup/item_11/id = 11
popup/item_12/text = "13"
popup/item_12/id = 12
popup/item_13/text = "14"
popup/item_13/id = 13
popup/item_14/text = "15"
popup/item_14/id = 14
popup/item_15/text = "16"
popup/item_15/id = 15
popup/item_16/text = "17"
popup/item_16/id = 16
popup/item_17/text = "18"
popup/item_17/id = 17
popup/item_18/text = "19"
popup/item_18/id = 18
popup/item_19/text = "20"
popup/item_19/id = 19
popup/item_20/text = "21"
popup/item_20/id = 20
popup/item_21/text = "22"
popup/item_21/id = 21
popup/item_22/text = "23"
popup/item_22/id = 22
popup/item_23/text = "24"
popup/item_23/id = 23
popup/item_24/text = "25"
popup/item_24/id = 24
popup/item_25/text = "26"
popup/item_25/id = 25
popup/item_26/text = "27"
popup/item_26/id = 26
popup/item_27/text = "28"
popup/item_27/id = 27
popup/item_28/text = "29"
popup/item_28/id = 28
popup/item_29/text = "30"
popup/item_29/id = 29
popup/item_30/text = "31"
popup/item_30/id = 30

[node name="aleatoire" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -128.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("2_yksyb")

[node name="valider" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("2_yksyb")

[connection signal="item_selected" from="centrage/choix/VBoxContainer/moisNaissance" to="." method="_on_mois_naissance_item_selected"]
[connection signal="item_selected" from="centrage/choix/VBoxContainer2/lettrePrenom" to="." method="_on_lettre_prenom_item_selected"]
[connection signal="item_selected" from="centrage/choix/VBoxContainer3/jourNaissance" to="." method="_on_jour_naissance_item_selected"]
[connection signal="pressed" from="aleatoire" to="." method="_on_aleatoire_pressed"]
[connection signal="pressed" from="valider" to="." method="_on_valider_pressed"]
